# Quarter-4---30-days-challenge

./: AIDD Assignment 4  README.md
advanced_calculator/: README.md  app.py  cli_main.py
advanced_calculator/calculator/: convert_currency.py  convert_length.py  convert_time.py  convert_weight.py  financial_ops.py  scientific_ops.py  test_currency_data.py  utils.py
advanced_calculator/specs/1-advanced-calculator-features/: data-model.md  plan.md  research.md  spec.md
advanced_calculator/specs/1-advanced-calculator-features/checklists/: requirements.md
advanced_calculator/specs/1-advanced-calculator-features/contracts/: currency_api_contract.md
assignment 4 project/quiz app/: app.py  gemini.md  pyproject.toml  requirements.txt
assignment 6 /.gemini/: .env  settings.json
assignment-4-project/quiz app/: agent.py  main.py  requirements.txt  tools.py
bookoutline-9/my-book-skills/: README.md
subagent-task-10/Editing Sub-Agent/: agent.md
subagent-task-10/Formatting Sub-Agent/: agent.md
subagent-task-10/Orchestrator Agent/: agent.md
subagent-task-10/Research Sub-Agent/: agent.md
subagent-task-10/Writing Sub-Agent/: agent.md
