[tool.poetry]
name = "summarizer-quiz-agent"
version = "0.1.0"
description = "A Streamlit agent that summarizes text and generates quizzes."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.28.0"
google-generativeai = "^0.4.0"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
